new inversion method (Grid)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "module": "commonjs",
         "moduleResolution": "node",
         "lib": ["es5", "es6", "dom", "es2020"],
-        "rootDir": "./src/"
+        "rootDir": "./src/",
+        "target": "ES2022"
     }
 }
