--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack",
-        "run": "node example/script.js"
+        "run": "node example/script.js",
+        "doc": "typedoc src/ --excludePrivate --disableSources -name 'Stress inversion API' --media ./media --out dist/docs --includeVersion --hideGenerator"
     },
     "keywords": [],
     "author": "fmaerten@gmail.com",
@@ -14,6 +15,7 @@
         "@types/node": "^18.15.11",
         "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
+        "typedoc": "^0.24.4",
         "typescript": "^5.0.4",
         "webpack": "^5.79.0",
         "webpack-cli": "^5.0.1"
